RESOLVED FIXED300616
[GStreamer] Clang warns about returning stack value in GStreamerPeerConnectionBackend.cpp
https://bugs.webkit.org/show_bug.cgi?id=300616
Summary [GStreamer] Clang warns about returning stack value in GStreamerPeerConnecti...
Adrian Perez
Reported 2025-10-13 02:13:49 PDT
Build with warnings-as-errors (e.g. developer builds) fails with Clang since 301385@main due to the following: .../Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:430:12: error: reference to stack memory associated with local variable 'transceiver' returned [-Werror,-Wreturn-stack-address] 430 | return transceiver.get(); | ^~~~~~~~~~~ 1 error generated.
Attachments
Adrian Perez
Comment 1 2025-10-13 02:26:23 PDT
Philippe Normand
Comment 2 2025-10-13 02:34:39 PDT
*** Bug 300617 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2025-10-13 06:14:07 PDT
Committed 301402@main (bf68b55937f3): <https://commits.webkit.org/301402@main> Reviewed commits have been landed. Closing PR #52228 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-10-13 06:15:13 PDT
Note You need to log in before you can comment on or make changes to this bug.